fixed uneven spacing by changing auto to a pixel value closes #1, added a meta viewport tag, made CSS changes including gradient background, darker box-shadows, centered calc

--- a/style.css
+++ b/style.css
@@ -2,20 +2,21 @@ html {
   height: 100%;
   overflow: hidden;
 }
-
 body {
   height: 100%;
+  display: block;
+  text-align: center;
+  margin: 30px auto;
+  background: linear-gradient(rgba(50, 50, 185, 0.9), rgba(255, 196, 90, 0.7));
 }
+
 .calculator {
-  display: grid;
-  max-width: 380px;
-  height: 70%;
-  grid-template:repeat(5, auto) / repeat(4, auto);
+  display: inline-grid;
+  grid-template: repeat(5, auto) / repeat(4, 80px);
   grid-gap: 7px;
   padding: 5px;
   background-color: #E1EAE4;
-  box-sizing: border-box;
-  box-shadow: 1px 1px 2px 1px rgba(100, 100, 100, 0.3);
+  box-shadow: 2px 2px 2px 2px rgba(50, 50, 50, 0.4);
 }
 
 .calculator > button {
@@ -24,8 +25,8 @@ body {
   color: #333;
   font-size: 1.4em;
   border-radius: 8px;
-  box-shadow: 1px 1px 1px 1px rgb(200, 200, 200);
-  padding: none;
+  box-shadow: 1px 1px 1px 1px rgb(150, 150, 150);
+  padding: 15px;
 }
 
 .display {
@@ -41,7 +42,7 @@ body {
   box-shadow: 1px 1px 1px 1px rgb(200, 200, 200);
   text-align: right;
   font-size: 1.7em;
-  padding: 0 5px;
+  padding: 15px;
 }
 
 .delete-button {
